--- a/generators/app/templates/.travis.yml
+++ b/generators/app/templates/.travis.yml
@@ -5,6 +5,10 @@ node_js:
   - v5
   - v4
 
+matrix:
+  allow_failures:
+    - node_js: v6
+
 after_script:
    - npm install codeclimate-test-reporter
    - node node_modules/.bin/codeclimate-test-reporter < coverage/lcov.info
