--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-rsx-plugin",
   "version": "0.1.0",
-  "description": "Boilerplate project for a plugin for the RSX CLI utility",
+  "description": "Yeoman generator for a plugin for the RSX CLI utility",
   "homepage": "http://github.com/react-native-contrib/generator-rsx-plugin",
   "author": {
     "name": "Hassan Khan",
@@ -35,12 +35,6 @@
     "gulp-mocha": "^2.0.0",
     "gulp-plumber": "^1.0.0",
     "gulp-nsp": "^2.1.0"
-  },
-  "eslintConfig": {
-    "extends": "xo-space",
-    "env": {
-      "mocha": true
-    }
   },
   "repository": "react-native-contrib/generator-rsx-plugin",
   "scripts": {
